Regression: fix hamburger and left menu icon alignment
Hamburger in beta and left menu icons in stable were not aligned
properly on iOS (< 7, maybe early 7 too) and Android 2.x because four
value background-position is not supported there.

Use percent values instead, CSSJanus seems to be changing them fine for
RTL languages.

--- a/less/common/uiNew.less
+++ b/less/common/uiNew.less
@@ -52,14 +52,13 @@
 		}
 
 		#mw-mf-main-menu-button {
-			background-position: left 40% top 40%;
-			.background-image('images/menu/hamburger.png');
+			background-position: 40% 40%;
 			.background-image-svg( 'images/menu/hamburger.svg', 'images/menu/hamburger.png' );
 		}
 
 		#secondary-button {
 			height: @headerHeight - 2 * @headerMargin;
-			background-position: right 40% top 40%;
+			background-position: 60% 40%;
 		}
 
 		// need to specify id or else other rules are more important
